@@ -78,15 +78,24 @@ HG.Ext.ZWave.NodeSetup.Refresh = function (module) {
         classdesc['25'] = 'Switch Binary';
         classdesc['26'] = 'Switch Multi Level';
         classdesc['27'] = 'Switch All';
+        classdesc['2B'] = 'Scene Activation';
         classdesc['30'] = 'Sensor Binary';
         classdesc['31'] = 'Sensor Multi Level';
         classdesc['32'] = 'Meter';
+        classdesc['38'] = 'Thermostat Heating';
+        classdesc['40'] = 'Thermostat Mode';
+        classdesc['42'] = 'Thermostat Operating State';
+        classdesc['43'] = 'Thermostat Set Point';
+        classdesc['44'] = 'Thermostat Fan Mode';
+        classdesc['45'] = 'Thermostat Fan State';
+        classdesc['47'] = 'Thermostat Set Back';
         classdesc['60'] = 'Multi Instance';
         classdesc['70'] = 'Configuration';
         classdesc['71'] = 'Alarm';
         classdesc['72'] = 'Manufacturer Specific';
         classdesc['77'] = 'Node Naming';
         classdesc['80'] = 'Battery';
+        classdesc['82'] = 'Hail';
         classdesc['84'] = 'Wake Up';
         classdesc['85'] = 'Association';
         classdesc['86'] = 'Version';
